--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         },
         auto2top: true,
         basePath: '/docs/',
-        coverpage: true,
+        coverpage: false,
         executeScript: true,
         loadSidebar: true,
         loadNavbar: true,
