--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   .replace('@master', '/blob/master');
               } else {
                 url =
-                  'https://github.com/docsifyjs/docsify/blob/develop/docs/' +
+                  'https://github.com/jnanadarshan/homelab-docs/blob/develop/docs/' +
                   vm.route.file;
               }
               var editHtml = '[:memo: Edit Document](' + url + ')\n';
@@ -99,7 +99,7 @@
                 editHtml +
                 html +
                 '\n\n----\n\n' +
-                '<a href="https://docsify.js.org" target="_blank" style="color: inherit; font-weight: normal; text-decoration: none;">Powered by docsify</a>'
+                '<a href="https://jdnayak.com" target="_blank" style="color: inherit; font-weight: normal; text-decoration: none;">Documented by Jnanadarshan Nayak</a>'
               );
             });
           },
